Fixed button alignment

--- a/example-bulk-store/style.css
+++ b/example-bulk-store/style.css
@@ -114,6 +114,10 @@ form {
   margin-bottom: 16px;
 }
 
+.form-button {
+  float: right;
+}
+
 /* Let's make our cards responsive! */
 
 /* // Small devices (landscape phones, 576px and up) */
@@ -135,9 +139,4 @@ form {
   .grid-cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
-}
-
-/* // Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-
 }
